Edit openAPI specification.
