# docs/swagger.json
@@ -42,7 +42,7 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "ok",
+                        "description": "created",
                         "schema": {
                             "$ref": "#/definitions/handlers.CreateTaskResponse"
                         }
@@ -85,7 +85,7 @@
                     }
                 ],
                 "responses": {
-                    "201": {
+                    "200": {
                         "description": "ok",
                         "schema": {
                             "$ref": "#/definitions/handlers.GetTaskResponse"
@@ -118,7 +118,7 @@
                 "summary": "Get all tasks ordered by priority (desc) for certain user",
                 "operationId": "get-tasks",
                 "responses": {
-                    "201": {
+                    "200": {
                         "description": "ok",
                         "schema": {
                             "$ref": "#/definitions/handlers.GetTasksResponse"
@@ -151,7 +151,7 @@
                 "summary": "Logout",
                 "operationId": "logout",
                 "responses": {
-                    "201": {
+                    "200": {
                         "description": "ok",
                         "schema": {
                             "type": "string"
@@ -195,7 +195,7 @@
                     }
                 ],
                 "responses": {
-                    "201": {
+                    "200": {
                         "description": "ok",
                         "schema": {
                             "type": "string"
@@ -240,7 +240,7 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "ok",
+                        "description": "created",
                         "schema": {
                             "type": "string"
                         }
@@ -283,7 +283,7 @@
                     }
                 ],
                 "responses": {
-                    "201": {
+                    "200": {
                         "description": "ok",
                         "schema": {
                             "$ref": "#/definitions/handlers.UpdatePriorityResponse"
@@ -327,7 +327,7 @@
                     }
                 ],
                 "responses": {
-                    "201": {
+                    "200": {
                         "description": "ok",
                         "schema": {
                             "$ref": "#/definitions/handlers.UpdateTaskResponse"
